# cross-examine

./: .gitignore  AGENTS.md  LICENSE  README.md  REMEDIATION.md  pyproject.toml  requirements.txt
.github/workflows/: verify.yml
.superpowers/sdd/: task-1-report.md
api/: index.py
artifacts/product-audit-2026-07-18/: audit.md
docs/: 2026-07-18-ordered-implementation-roadmap.md  2026-07-18-verification-foundations-decision-record.md  21st-component-integration.md  approved-21st-components.md  architecture.md  capability-status.md  demo.md  execution-policy.md  probe-plans.md  provenance.md  submission.md  trials.md
docs/research/: autonomous-mission-ledger.md  benchmark-handoff.md  corpus-lifecycle-handoff.md  intended-oracle-handoff.md  phase-1-roadmap-handoff.md  real-gpt56-run-handoff.md  setup-hook-handoff.md  value-support-handoff.md
docs/superpowers/plans/: 2026-07-15-build-week-release.md  2026-07-15-cross-examine-implementation.md  2026-07-15-trials-product-surface.md  2026-07-16-welcome-hero.md  2026-07-18-autonomous-mission-phase-0.md  (+2 more)
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/e2e/: broken-verdict.spec.ts
frontend/src/: index.css  main.tsx
public/: index.html
public/assets/: index-1hHMzRj_.js
scripts/: build_hero_repo.py  generate_hosted_fixture.py  run_trials.py  verify.ps1  verify.sh
src/cross_examine/: __init__.py  cli.py  codec.py  execution.py  fixtures.py  hero.py  pipeline.py  probe_plans.py  progress.py  schema.py  settings.py  validation.py
tests/: conftest.py
tests/e2e/: test_cli_demo.py  test_layer_a_pipeline.py
tests/integration/: test_api_fixture.py  test_api_jobs.py  test_corpus.py  test_hosted_fixture_capture.py  test_ingest.py  test_layer_a.py  test_layer_b.py  test_probe_plan_relations.py  test_run_repository.py
tests/release/: test_editable_install.py  test_local_product_run.py  test_wheel_install.py
tests/unit/: test_characterize.py  test_codec.py  test_documentation.py  test_edge_catalog.py  test_execution.py  test_ingest_symbols.py  test_probe_plans.py  test_probe_runner.py  test_schema.py  test_validation.py  test_verification_entrypoints.py
(+155 files in other folders)
