[project]
name = "cross-examine"
version = "0.1.0"
description = "Independent execution-grounded verification for Codex-authored Python PRs"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "hypothesis",
  "openai",
  "pydantic>=2",
  "pytest",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
  "httpx2",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
]

[project.scripts]
cross-examine = "cross_examine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cross_examine"]

[tool.hatch.build.targets.wheel.force-include]
"tests/fixtures/hero_repo/source" = "cross_examine/hero_source"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.cross-examine",
  "/.venv",
  "/dist",
  "/frontend/node_modules",
  "/frontend/playwright-report",
  "/frontend/test-results",
  "/work",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
norecursedirs = ["fixtures"]

[tool.ruff]
line-length = 100
target-version = "py312"
